added tests for raw_orders and raw_customers

--- a/models/raw/raw_globalmart.yml
+++ b/models/raw/raw_globalmart.yml
@@ -7,3 +7,17 @@ models:
        tests: 
          - unique
          - not_null
+  - name: raw_orders
+    columns:
+     - name: orderid
+       tests:
+        - unique
+        - not_null
+     - name: shipmode
+       tests:
+         - accepted_values:
+              values:
+                - 'First Class'
+                - 'Same Day'
+                - 'Second Class'
+                - 'Standard Class'
