--- a/models/raw/src_globalmart.yml
+++ b/models/raw/src_globalmart.yml
@@ -7,6 +7,11 @@ sources:
     tables: 
       - name: customers
       - name: orders
+        columns:
+          - name: orderid
+            tests:
+              - unique
+              - not_null
       - name: product
       
        
